src/routes/app.css
* { box-sizing: border-box; }

:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  color: #f6f6f6;
  background-color: #0f0f0f;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

.container {
  height: 100%;
  width: 100%;
  overflow: hidden;
  margin: 0;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  text-align: center;
}

.spacer {
  display: flex;
  flex-direction: row;
  flex: 1;
}

.infoText {
  display: flex;
  flex-direction: column;
  opacity: 0.5;
}

#menuBar {
  position: fixed;
  top: 0;
  right: 0;
  left: 85px;
  display: flex;
  flex-direction: row;
  align-items: center;
  height: 70px;
}

#menuBar h2 {
  width: 70px;
  margin-left: 15px;
  text-align: left;
}

#runningTimerContainer, #timesContainer {
  display: flex;
  flex: 1 1 0;
  flex-direction: row;
  justify-self: right;
  justify-content: flex-end;
  align-items: center;
  max-width: 150px;
  max-height: 70px;
  height: 100%;
  width: 100%;
  gap: 10px;
}

#timesContainer {
  padding-right: 4px;
}

#runningTimerContainer button {
  position: fixed;
  right: 129px;
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 20px;
  height: 70px;
  width: 100%;
  background: transparent;
  border: 0;
  padding: 0;
  transition: right 0.4s cubic-bezier(0.645, 0.045, 0.355, 1.000);
}

#runningTimerContainer button.closed {
  right: 0px;
  padding-right: 10px;
}

#runningTimerArrow {
  rotate: -90deg;
  max-width: 20px;
  max-height: 20px;
  height: 100%;
  filter: brightness(1) invert(0.7);
  transition: rotate 0.2s, transform 0.2s;
}

#runningTimerArrow.pointleft {
  rotate: 90deg;
}

#runningTimerArrow:hover {
  cursor: pointer;
  transform: scale(1.2);
}

#runningDisplayMinutes, #runningDisplaySeconds {
  display: flex;
  flex: 1 1 0;
  max-width: 50px;
  width: 100%;
  max-height: 62px;
  height: 100%;
  justify-content: center;
  align-items: center;
  background: #222;
  border-radius: 8px;
}

#runningDisplayMinutes p, #runningDisplaySeconds p {
  margin: 0;
  font-size: 24px;
}

#notesMenuBarControls {
  display: flex;
  flex: 1 1 0;
  max-width: 425px;
  flex-direction: row;
  align-items: center;
  gap: 5px;
}

#notesMenuBarControls button, .editorToolbar button {
  background: #222;
  color: #f6f6f6;
  height: 40px;
  max-width: 100px;
  width: 100%;
  border: 0;
  border-radius: 8px;
  box-shadow: 0 4px 12px rgba(0,0,0,0.8);
  transition: transform 0.2s, box-shadow 0.2s;
}

#notesMenuBarControls button:hover, .editorToolbar button:hover {
  background: #333;
  cursor: pointer;
  box-shadow: 0 8px 24px rgba(0,0,0,1);
  transform: translateY(-4px);
}

#notesMenuBarControls select, .editorToolbar select {
  background: #222;
  color: #f6f6f6;
  height: 40px;
  max-width: 100px;
  width: 100%;
  outline: 0;
  border: 0;
  border-radius: 8px;
  margin-left: 10px;
  box-shadow: 0 4px 12px rgba(0,0,0,0.8);
  transition: box-shadow 0.2s;
}

#notesMenuBarControls select:hover, .editorToolbar select:hover {
  background: #333;
  cursor: pointer;
  box-shadow: 0 8px 24px rgba(0,0,0,1);
}

#notesMenuBarControls select option, .editorToolbar select option {
  background-color: #222;
}

#searchBarContainer {
  display: flex;
  flex-direction: row;
  flex: 1 1 0;
  align-items: center;
  justify-content: left;
  margin: 0 50px;
}

#searchBarBtn, #searchBarCloseBtn {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 60px;
  height: 40px;
  background: #222;
  border-radius: 20px 0 0 20px;
  border: 1px solid #444;
  border-right: none;
}

#searchIcon {
  width: 25px;
  height: 25px;
  filter: brightness(0) invert(0.7);
}

#searchBarCloseBtn {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  border: 1px solid #444;
  margin-left: 10px;
  transition: transform 0.2s;
}

#closeIcon {
  height: 18px;
  width: 18px;
  filter: brightness(0) invert(0.7);
}

#searchBarInputContainer {
  display: flex;
  flex-direction: row;
  flex: 1 1 0;
  align-items: center;
  background: #222;
  max-width: 500px;
  width: 100%;
  height: 40px;
  border: 1px solid #444;
  border-radius: 0 20px 20px 0;
  outline: none;
}

#searchBarInputContainer button, input {
  background: transparent;
  border: 0;
  outline: 0;
}

#searchBarInputContainer button {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 10px;
  width: 10px;
  margin: 0 20px;
  padding: 0;
}

#clearSearchIcon {
  height: 10px;
  width: 10px;
  filter: brightness(0) invert(0.7);
}

#clearSearchIcon:hover {
  filter: brightness(0) invert(0.9);
}

#searchBarInputContainer input {
  width: 100%;
  height: 100%;
  padding-left: 10px;
  color: #f6f6f6;
  font-size: 18px;
}

#searchBarInputContainer input:focus {
  border: 1px solid #723fffd0;
}

#searchBarBtn:hover, #searchBarCloseBtn:hover {
  cursor: pointer;
  background: #333;
}

#searchBarCloseBtn:hover {
  transform: translateY(-4px);
}

#middle {
  position: fixed;
  top: 70px;
  bottom: 50px;
  left: 85px;
  right: 0;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  transition: bottom 200ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
  transition-delay: 100ms;
}

#middle.enlarged {
  bottom: 20px;
}

#navigationBar {
  position: fixed;
  left: 0;
  top: 0;
  bottom: 50px;
  display: flex;
  flex-direction: column;
  flex: 1 1 0;
  max-width: 55px;
  width: 100%;
  margin: 0 15px;
  gap: 10px;
  padding: 15px 0;
}

#navigationBar button {
  background: #222;
  max-width: 55px;
  width: 100%;
  max-height: 55px;
  height: 100%;
  border: none;
  color: #f6f6f6;
  box-shadow: 0 4px 12px rgba(0,0,0,0.8);
  border-radius: 8px;
  padding: 0;
  transition: transform 0.2s, box-shadow 0.2s;
}
/* ... */

